<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <DUT Name="ST_BypassTII" Id="{300e88d0-9cee-42ad-8007-23e961243a04}">
    <Declaration><![CDATA[TYPE ST_BypassTII :
STRUCT
	bHMITIIByPassArray:ARRAY[1..NO_OF_TII_SENSOR] OF BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>